--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-json": "^2.0.2",
     "koa-jwt": "^3.3.1",
     "koa-logger": "^2.0.1",
+    "koa-multer": "^1.0.2",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
